RESOLVED FIXED89736
REGRESSION(r117738): validationMessage IDL attribute should not have range overflow message if value isn't range overflow
https://bugs.webkit.org/show_bug.cgi?id=89736
Summary REGRESSION(r117738): validationMessage IDL attribute should not have range ov...
yosin
Reported 2012-06-21 22:30:08 PDT
= Step to Re-Produce = 1. Visit http://jsfiddle.net/5rGQX/ 2. Click "Run" on top of the page 3. See output * Expected result: only "1" * Actual result: "1 1 Value must be less than or equal to 3." Note: Imported from http://crbugs.com/134096 This is regression of r117738 in WebCore/html/InputType.cpp String InputType::validationMessage() { ... if (doubleValue < stepRange.maximum()) // ** BUG ** return validationMessageRangeOverflowText(serialize(stepRange.maximum())); ... }
Attachments
Patch 1 (10.84 KB, patch)
2012-06-22 00:11 PDT, yosin
no flags
Patch 2 (10.81 KB, patch)
2012-06-22 00:24 PDT, yosin
no flags
Patch 3 (10.66 KB, patch)
2012-06-22 03:38 PDT, yosin
no flags
yosin
Comment 1 2012-06-22 00:11:36 PDT
yosin
Comment 2 2012-06-22 00:12:23 PDT
Comment on attachment 148971 [details] Patch 1 Could you review this patch? Thanks in advance.
Kent Tamura
Comment 3 2012-06-22 00:21:42 PDT
Comment on attachment 148971 [details] Patch 1 View in context: https://bugs.webkit.org/attachment.cgi?id=148971&action=review The code change and the tests are good. Please fix ChangeLog before landing. > Source/WebCore/ChangeLog:3 > + [REGRESSION:117738][Forms] validationMessage IDL attribute should not have range overflow message if value isn't range overflow Please follow a style we usually use for a regression. This should be REGRESSION(r117738): ... > LayoutTests/ChangeLog:3 > + [REGRESSION:117738][Forms] validationMessage IDL attribute should not have range overflow message if value isn't range overflow ditto. > LayoutTests/ChangeLog:11 > + Expected texts are for ENABLE_INPUT_TYPE_DATE=1 and ENABLE_INPUT_TYPE_RANGE=1. > + Ports don't enable one of them should update test expectations. We have no ENABLE_INPUT_TYPE_RANGE.
yosin
Comment 4 2012-06-22 00:24:46 PDT
Kent Tamura
Comment 5 2012-06-22 00:29:46 PDT
Comment on attachment 148974 [details] Patch 2 View in context: https://bugs.webkit.org/attachment.cgi?id=148974&action=review > LayoutTests/ChangeLog:11 > + Expected texts are for ENABLE_INPUT_TYPE_DATE=1. > + Ports don't enable one of them should update test expectations. texts -> tests? A port without ENABLE_INPUT_TYPE_DATE skips tests in fast/forms/date/. This sentence looks unnecessary.
yosin
Comment 6 2012-06-22 03:38:07 PDT
WebKit Review Bot
Comment 7 2012-06-22 05:54:20 PDT
Comment on attachment 148990 [details] Patch 3 Clearing flags on attachment: 148990 Committed r121019: <http://trac.webkit.org/changeset/121019>
WebKit Review Bot
Comment 8 2012-06-22 05:54:24 PDT
All reviewed patches have been landed. Closing bug.
Ádám Kallai
Comment 9 2012-06-22 07:29:51 PDT
This test fails on Qt. * fast/forms/number/input-number-validation-message.html I created new bug report. https://bugs.webkit.org/show_bug.cgi?id=89760
Note You need to log in before you can comment on or make changes to this bug.