REGRESSION(r117738):[Forms] validationMessage IDL attribute should not have range overflow message if value isn't range overflow https://bugs.webkit.org/show_bug.cgi?id=89736

Reviewed by Kent Tamura.

Source/WebCore:

Tests: fast/forms/date/input-date-validation-message.html
       fast/forms/number/input-number-validation-message.html
       fast/forms/range/input-range-validation-message.html

This patch changes comparison operator for range overflow message in
InputType::validationMessage().

* html/InputType.cpp:
(WebCore::InputType::validationMessage):

LayoutTests:

Tests for HTMLInputElement.validationMessage attribute.

* fast/forms/date/input-date-validation-message-expected.txt: Added.
* fast/forms/date/input-date-validation-message.html: Added.
* fast/forms/number/input-number-validation-message-expected.txt: Added.
* fast/forms/number/input-number-validation-message.html: Added.
* fast/forms/range/input-range-validation-message-expected.txt: Added.
* fast/forms/range/input-range-validation-message.html: Added.


Canonical link: https://commits.webkit.org/107602@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121019 268f45cc-cd09-0410-ab3c-d52691b4dbfc